--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".PageActivity">
+
+        </activity>
+        <activity android:name=".TeacherActivity">
+
+        </activity>
     </application>
 
 </manifest>
